--- a/style.css
+++ b/style.css
@@ -9,10 +9,17 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(220.55deg, #0E2C5E 0%, #000000 100%);
+    background: linear-gradient(220.55deg, #0e2c5e 0%, #000000 100%);
+
 }
 
 #vidBrunno {
     width: 854px;
     height: 480px;
+    border-radius: 0.7rem;
+    transition: .5s;
+}
+
+#vidBrunno:hover {
+    box-shadow: 0px 0px 85px 20px #3c8aff;
 }
