--- a/style.css
+++ b/style.css
@@ -1,37 +1,52 @@
-body {
-    margin: 0px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.videoSect {
+body {
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction:column;
     align-items: center;
     justify-content: center;
     background: linear-gradient(220.55deg, #0e2c5e 0%, #000000 100%);
+}
+
+.videoSect {
     position: relative;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    transition: .5s;
 
 }
 
 #vidBrunno {
-    width: 70%;
-    border-radius: 0.7rem;
-    transition: .8s;
+    width: 70vw;
+    border-radius: 0.8rem;
+    position: relative;
 }
 
-#vidBrunno:hover {
-    box-shadow: 0px 0px 85px 20px #3c8aff;
-}
-
-.controle{
-    background-color: red;
-    width: 70%;
-    height: 6%;
+.controle {
+    background-color: rgba(0, 38, 255, 0.253);
+    width: 70vw;
+    height: 100%;
     border-radius: 0 0 0.7rem 0.7rem;
     position: absolute;
-    text-align: center;
+    display: flex;
+    flex-direction:row;
+    align-items:flex-end;
+    justify-content: center;
+    opacity: 0;
+    transition: .3s;
 }
-/* .btn{
-  
-} */
+
+.controle:hover {
+    opacity: 1;
+   
+}
+
+.videoSect:hover {
+    border-radius: 0.8rem;
+    box-shadow: 0px 0px 85px 20px #3c8aff;
+}
