--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -24,11 +24,11 @@ body {
 #vidBrunno {
     width: 70vw;
     border-radius: 0.8rem;
-    position: relative;
+    position: flex;
 }
 
 .controle {
-    background-color: rgba(0, 38, 255, 0.253);
+    /* background-color: rgba(0, 38, 255, 0.253); */
     width: 70vw;
     height: 100%;
     border-radius: 0 0 0.7rem 0.7rem;
@@ -42,11 +42,11 @@ body {
 }
 
 .controle:hover {
-    opacity: 1;
+    opacity: 0.5;
    
 }
-
+ 
 .videoSect:hover {
     border-radius: 0.8rem;
     box-shadow: 0px 0px 85px 20px #3c8aff;
-}
+} 
