--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .controle {
-    /* background-color: rgba(0, 38, 255, 0.253); */
+    background-color: rgba(0, 38, 255, 0.253);
     width: 70vw;
     height: 100%;
     border-radius: 0 0 0.7rem 0.7rem;
